add section hypergraph

--- a/macros.tex
+++ b/macros.tex
@@ -22,6 +22,7 @@
 \newcommand{\Hybrid}{{$T_{\text{Hybrid}}(H,V') = (V_{\text{Hybrid}}, E_{\text{Hybrid}},\capa_{\text{Hybrid}})$}}
 \newcommand{\ShortHybrid}{{$T_{\text{Hybrid}}(H,V')$}}
 \newcommand{\SubExtension}{Ex(H_{V'})}
+\newcommand{\SectionHypergraph}{S_{V'}}
 
 %Residual Capacity
 \newcommand{\R}[1]{{r_f({#1})}}
